--- a/src/main/webapp/assets/css/s.css
+++ b/src/main/webapp/assets/css/s.css
@@ -1,10 +1,10 @@
 input.search {
-    width: 270px;
-    height: 35px;
+    width: 170px;
+    height: 25px;
     margin-top: 10px;
     padding: 0 15px;
-    background: #2d2d2d; /* browsers that don't support rgba */
-    background: rgba(45,45,45,.15);
+    background: #c0c0c0; /* browsers that don't support rgba */
+    background: rgba(45,45,45,.10);
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px; 
     border-radius: 6px;
@@ -15,7 +15,7 @@ input.search {
     box-shadow: 0 2px 3px 0 rgba(0,0,0,.1) inset;  
      font-family: 'PT Sans', Helvetica, Arial, sans-serif;
     font-size: 14px;
-    color: #fff; 
+    color: #272727; 
     text-shadow: 0 1px 2px rgba(0,0,0,.1);
      -o-transition: all .2s;
     -moz-transition: all .2s;
@@ -41,15 +41,15 @@ input.search:focus {
 }
 button.search {
 
-    width: 140px;
-    height: 35px;
+    width: 70px;
+    height: 25px;
     margin-top: 10px;
 /*     padding: 0; */
-    background: #ef4300;
+    background: #808080;
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     border-radius: 6px;
-    border: 1px solid #ff730e;
+    border: 1px solid #808080;
     -moz-box-shadow:
         0 15px 30px 0 rgba(255,255,255,.25) inset,
         0 2px 7px 0 rgba(0,0,0,.2);
@@ -93,5 +93,5 @@ button.search:active {
         0 5px 8px 0 rgba(0,0,0,.1) inset,
         0 1px 4px 0 rgba(0,0,0,.1);
 
-    border: 0px solid #ef4300;
+    border: 0px solid #808080;
 }
